[tool.poetry]
name = "python-extension-common"
version = "0.1.0"
description = "A collection of common utilities for Exasol extensions."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "[^3.8]"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
